--- a/connection-manager/package.json
+++ b/connection-manager/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "config": "^1.28.1",
     "cors": "^2.8.4",
     "cross-spawn": "^5.1.0",
     "eslint": "^4.11.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
