--- a/connection-manager/package.json
+++ b/connection-manager/package.json
@@ -22,6 +22,7 @@
     "cross-spawn": "^5.1.0",
     "eslint": "^4.11.0",
     "express": "^4.16.2",
+    "material-ui": "^0.19.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
