--- a/connection-manager/package.json
+++ b/connection-manager/package.json
@@ -15,6 +15,7 @@
   "author": "Vlad Zat",
   "license": "MIT",
   "dependencies": {
+    "aws-cli-js": "^2.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
@@ -23,6 +24,7 @@
     "eslint": "^4.11.0",
     "express": "^4.16.2",
     "material-ui": "^0.19.4",
+    "node-ssh": "^5.0.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
