--- a/blog/.env
+++ b/blog/.env
@@ -2,3 +2,4 @@ REACT_APP_API_SERVER=http://localhost:4001/api/v1
 REACT_APP_API_TOKEN=a123
 REACT_APP_DATABASE=blog
 REACT_APP_COLLECTION=posts
+PORT=5000
